--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Rishabh Singh</title>
+  </head>
+  <body>
+    <h1>Rishabh Singh</h1>
+    <p>Data Science student at the University of Michigan.</p>
+    <p>
+      Interested in analytics, sports data, and applied modeling.
+    </p>
+  </body>
+</html>
 
