--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
           <a href="#projects">Projects</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
-          <a class="pill" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">GitHub</a>
+          <a
+            class="pill"
+            href="https://github.com/rishabhsxngh"
+            target="_blank"
+            rel="noreferrer"
+            >GitHub</a
+          >
         </nav>
       </div>
     </header>
@@ -43,8 +49,7 @@
             </h1>
 
             <p class="subhead">
-              Data Science student at the University of Michigan focused on analytics, sports data,
-              and applied modeling. I like building clean dashboards, pipelines, and decision tools.
+              Data Science student at the University of Michigan focused on analytics, sports data, and applied modeling. I like building clean dashboards, pipelines, and decision tools.
             </p>
 
             <div class="cta-row">
@@ -74,6 +79,12 @@
               <div class="dot yellow"></div>
               <div class="dot green"></div>
             </div>
+
+            <!-- HEADSHOT (add this) -->
+            <div class="headshot-wrap">
+              <img class="headshot" src="IMG_6308.jpg" alt="Rishabh Singh headshot" />
+            </div>
+
             <pre class="code">
 <span class="code-muted"># currently working on</span>
 <span class="code-strong">NBA Prospect Evaluation Tool</span>
@@ -82,6 +93,7 @@
 - zone FG% + shot diet
 - filters + comparisons
 - clean visuals + storytelling</pre>
+
             <div class="hero-card-bottom">
               <a class="mini-link" href="#projects">See projects ↓</a>
             </div>
