--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rishabh Singh</title>
+    <title>Rishabh Singh - Data Analyst</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,9 +23,10 @@
 
         <nav class="nav-links">
           <a href="#projects">Projects</a>
+          <a href="#experience">Experience</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
-          <a
+          
             class="pill"
             href="https://github.com/rishabhsxngh"
             target="_blank"
@@ -41,33 +42,33 @@
       <section class="hero">
         <div class="container hero-inner">
           <div>
-            <p class="kicker">Data Science • Sports Analytics • Visualization</p>
+            <p class="kicker">Data Analyst • ETL Pipelines • Analytics Engineering</p>
             <h1 class="headline">
               Rishabh Singh
-              <span class="accent">builds analytics tools</span>
-              that turn sports data into decisions.
+              <span class="accent">builds data pipelines</span>
+              and analytics tools for enterprise AI and finance.
             </h1>
 
             <p class="subhead">
-              Data Science student at the University of Michigan focused on analytics, sports data, and applied modeling. I like building clean dashboards, pipelines, and decision tools.
+              Data Science student at the University of Michigan with experience building ETL pipelines, 
+              automating analytics workflows, and delivering insights from large-scale datasets. 
+              Currently working on sports analytics tools and portfolio modeling.
             </p>
 
             <div class="cta-row">
               <a class="btn primary" href="#projects">View projects</a>
               <a class="btn" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">GitHub</a>
-              <!-- optional: resume link
-              <a class="btn" href="/resume.pdf" target="_blank" rel="noreferrer">Resume</a>
-              -->
+              <a class="btn" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">LinkedIn</a>
             </div>
 
             <div class="meta">
               <div class="meta-item">
-                <span class="meta-label">Focus</span>
-                <span class="meta-value">NBA + CBB tools, modeling, dashboards</span>
+                <span class="meta-label">Current Role</span>
+                <span class="meta-value">Data Analyst @ AfterQuery Experts</span>
               </div>
               <div class="meta-item">
                 <span class="meta-label">Stack</span>
-                <span class="meta-value">Python, R, SQL, Shiny, Git</span>
+                <span class="meta-value">Python, R, SQL, C++, Git</span>
               </div>
             </div>
           </div>
@@ -80,19 +81,24 @@
               <div class="dot green"></div>
             </div>
 
-            <!-- HEADSHOT (add this) -->
+            <!-- HEADSHOT -->
             <div class="headshot-wrap">
               <img class="headshot" src="IMG_6308.jpg" alt="Rishabh Singh headshot" />
             </div>
 
-            <pre class="code">
-<span class="code-muted"># currently working on</span>
-<span class="code-strong">NBA Prospect Evaluation Tool</span>
+            <!-- NFL LOGO -->
+            <div style="text-align: center; padding: 12px 0 8px;">
+              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a2/National_Football_League_logo.svg/300px-National_Football_League_logo.svg.png" alt="NFL" style="height: 36px; opacity: 0.85;" />
+            </div>
 
-- shot chart exploration
-- zone FG% + shot diet
-- filters + comparisons
-- clean visuals + storytelling</pre>
+            <pre class="code">
+<span class="code-muted"># recently completed</span>
+<span class="code-strong">NFL Penalty Analytics Dashboard</span>
+
+- R Shiny application
+- 2018-2023 play-by-play data
+- penalty margin vs win % analysis
+- interactive team comparisons</pre>
 
             <div class="hero-card-bottom">
               <a class="mini-link" href="#projects">See projects ↓</a>
@@ -101,12 +107,91 @@
         </div>
       </section>
 
+      <!-- EXPERIENCE -->
+      <section id="experience" class="section">
+        <div class="container">
+          <div class="section-head">
+            <h2>Experience</h2>
+            <p>Data analyst roles focused on ETL, automation, and enterprise analytics.</p>
+          </div>
+
+          <div class="grid">
+            <article class="card">
+              <div class="card-top">
+                <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+                  <img src="afterquery_experts_logo.jpeg" alt="AfterQuery Experts" style="height: 32px; width: 32px; object-fit: contain;" />
+                  <h3 style="margin: 0;">AfterQuery Experts</h3>
+                </div>
+                <p class="tag-row">
+                  <span class="tag">Data Analyst</span>
+                  <span class="tag">Aug 2025 - Present</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Built Python ETL pipelines processing 100k+ weekly records for enterprise AI teams at Berkeley and Stanford. 
+                Developed internal APIs for dataset delivery and improved pipeline runtime by ~25% through optimized validation logic.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">
+                  LinkedIn →
+                </a>
+              </div>
+            </article>
+
+            <article class="card">
+              <div class="card-top">
+                <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+                  <img src="1631376160671.jpeg" alt="Academic Analytics" style="height: 32px; width: 32px; object-fit: contain;" />
+                  <h3 style="margin: 0;">Academic Analytics</h3>
+                </div>
+                <p class="tag-row">
+                  <span class="tag">Data Analyst</span>
+                  <span class="tag">Jun - Sep 2025</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Analyzed $10B+ in vendor spend data across 135+ universities using Python. 
+                Automated reporting pipelines, reducing processing time by ~35% and saving 10+ hours/week. 
+                Extracted and analyzed SEC filings in R for vendor financial health assessment.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">
+                  LinkedIn →
+                </a>
+              </div>
+            </article>
+
+            <article class="card">
+              <div class="card-top">
+                <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+                  <img src="images__3_.jpeg" alt="The Coder School" style="height: 32px; width: 32px; object-fit: contain; border-radius: 50%;" />
+                  <h3 style="margin: 0;">The Coder School</h3>
+                </div>
+                <p class="tag-row">
+                  <span class="tag">Code Coach</span>
+                  <span class="tag">May - Aug 2024</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Led curriculum development and technical outreach with high schools in NC and CA, driving ~25% revenue growth. 
+                Taught C++ and web development to 20-30 students per cohort through project-based learning.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">
+                  LinkedIn →
+                </a>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
       <!-- PROJECTS -->
-      <section id="projects" class="section">
+      <section id="projects" class="section alt">
         <div class="container">
           <div class="section-head">
             <h2>Projects</h2>
-            <p>Selected work. More coming as I polish and publish.</p>
+            <p>Analytics tools, dashboards, and modeling work.</p>
           </div>
 
           <div class="grid">
@@ -127,7 +212,6 @@
                 <a class="link" href="https://github.com/rishabhsxngh/nba-prospect-evaluation-tool" target="_blank" rel="noreferrer">
                   Code →
                 </a>
-                <!-- Add your live demo link when deployed -->
                 <a class="link" href="#" aria-disabled="true" title="Add your deployed Shiny link here">
                   Live demo →
                 </a>
@@ -136,37 +220,61 @@
 
             <article class="card">
               <div class="card-top">
-                <h3>NBA / Sports Analytics Portfolio</h3>
+                <h3>NFL Penalty Margin & Win Analysis</h3>
                 <p class="tag-row">
-                  <span class="tag">Python</span>
-                  <span class="tag">SQL</span>
-                  <span class="tag">Dashboards</span>
+                  <span class="tag">R</span>
+                  <span class="tag">Shiny</span>
+                  <span class="tag">Sports Analytics</span>
                 </p>
               </div>
               <p class="card-body">
-                A growing set of sports analytics projects: data pipelines, feature engineering, and visual tools.
-                This card is a placeholder you can swap with your next best project.
+                Interactive R Shiny dashboard analyzing NFL play-by-play data (2018-2023). 
+                Features penalty margin vs win % correlation, z-score outlier detection, and home/away splits across all teams.
               </p>
               <div class="card-actions">
-                <a class="link" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">GitHub →</a>
+                <a class="link" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">
+                  Code →
+                </a>
               </div>
             </article>
 
             <article class="card">
               <div class="card-top">
-                <h3>Coursework + Research</h3>
+                <h3>Portfolio Value Creation Dashboard</h3>
                 <p class="tag-row">
-                  <span class="tag">ML</span>
-                  <span class="tag">Inference</span>
-                  <span class="tag">Writing</span>
+                  <span class="tag">Python</span>
+                  <span class="tag">Finance</span>
+                  <span class="tag">Modeling</span>
                 </p>
               </div>
               <p class="card-body">
-                Selected class projects and writeups. If you want, we can add a “Writing” section with links
-                and short summaries.
+                Built portfolio analytics dashboard modeling revenue, margin, and EBITDA drivers across product lines. 
+                Conducted pricing and cost sensitivity analyses with investor-ready executive summaries.
               </p>
               <div class="card-actions">
-                <a class="link" href="#contact">Request samples →</a>
+                <a class="link" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">
+                  Code →
+                </a>
+              </div>
+            </article>
+
+            <article class="card">
+              <div class="card-top">
+                <h3>Good Karma Engineering</h3>
+                <p class="tag-row">
+                  <span class="tag">Non-Profit</span>
+                  <span class="tag">3D Printing</span>
+                  <span class="tag">Leadership</span>
+                </p>
+              </div>
+              <p class="card-body">
+                Founded non-profit focused on 3D printing prosthetic limbs. 
+                Shipped 50+ fully functional arms and legs to people across the US, England, and India.
+              </p>
+              <div class="card-actions">
+                <a class="link" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">
+                  Learn more →
+                </a>
               </div>
             </article>
           </div>
@@ -174,69 +282,81 @@
       </section>
 
       <!-- ABOUT -->
-      <section id="about" class="section alt">
+      <section id="about" class="section">
         <div class="container">
           <div class="section-head">
             <h2>About</h2>
-            <p>A little context about what I care about and how I work.</p>
+            <p>Background, skills, and what I'm looking for.</p>
           </div>
 
           <div class="two-col">
             <div class="panel">
               <h3>What I do</h3>
               <p>
-                I build data products that are easy to use and easy to trust: clean interfaces, transparent
-                metrics, and sensible defaults. I like projects where the output informs a real decision.
+                I build data pipelines and analytics tools that support real decisions. 
+                My work focuses on ETL automation, data quality, and turning messy datasets into clean, actionable insights.
               </p>
               <ul class="bullets">
-                <li>Sports analytics tools (NBA, college basketball)</li>
-                <li>Data pipelines and reproducible workflows</li>
-                <li>Applied modeling and evaluation</li>
+                <li>Python-based ETL pipelines and data workflows</li>
+                <li>Analytics automation and reporting infrastructure</li>
+                <li>Sports analytics and interactive dashboards (R Shiny)</li>
+                <li>Financial modeling and portfolio analytics</li>
               </ul>
             </div>
 
             <div class="panel">
-              <h3>What I’m looking for</h3>
+              <h3>Technical Skills</h3>
               <p>
-                Internships and roles where I can ship real analytics and product features. If you are building
-                tools around data, I want to help.
+                Core competencies across data engineering, analytics, and software development.
               </p>
               <div class="small-grid">
                 <div class="mini">
-                  <span class="mini-label">Interested in</span>
-                  <span class="mini-value">Data Science, Analytics, SWE</span>
-                </div>
-                <div class="mini">
-                  <span class="mini-label">Domains</span>
-                  <span class="mini-value">Sports, consumer apps, fintech</span>
+                  <span class="mini-label">Languages</span>
+                  <span class="mini-value">Python, R, SQL, C/C++</span>
                 </div>
                 <div class="mini">
                   <span class="mini-label">Tools</span>
-                  <span class="mini-value">R, Python, SQL, Git</span>
+                  <span class="mini-value">Git, Pandas, NumPy, PyTorch</span>
                 </div>
                 <div class="mini">
-                  <span class="mini-label">Based</span>
-                  <span class="mini-value">Ann Arbor / NYC</span>
+                  <span class="mini-label">Web</span>
+                  <span class="mini-value">HTML, CSS, JavaScript, ReactJS</span>
+                </div>
+                <div class="mini">
+                  <span class="mini-label">Education</span>
+                  <span class="mini-value">UMich Data Science (3.71 GPA)</span>
                 </div>
               </div>
             </div>
+          </div>
+
+          <div class="panel" style="margin-top: 14px;">
+            <h3>What I'm looking for</h3>
+            <p>
+              Internships and full-time roles in data science, analytics engineering, or software development. 
+              I want to work on teams that ship data products and care about data quality, clean code, and measurable impact.
+            </p>
+            <p style="margin-bottom: 0;">
+              <strong>Interested in:</strong> Data Science, Analytics Engineering, Software Engineering<br />
+              <strong>Domains:</strong> Sports tech, fintech, enterprise SaaS, AI/ML infrastructure<br />
+              <strong>Based:</strong> Ann Arbor, MI / Long Island, NY
+            </p>
           </div>
         </div>
       </section>
 
       <!-- CONTACT -->
-      <section id="contact" class="section">
+      <section id="contact" class="section alt">
         <div class="container">
           <div class="section-head">
             <h2>Contact</h2>
-            <p>Best way to reach me: email + GitHub.</p>
+            <p>Best way to reach me: email or LinkedIn.</p>
           </div>
 
           <div class="contact-row">
-            <!-- Replace with your real email -->
-            <a class="btn primary" href="mailto:YOUR_EMAIL_HERE">Email me</a>
+            <a class="btn primary" href="mailto:rishps@umich.edu">Email me</a>
             <a class="btn" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">GitHub</a>
-            <a class="btn" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
+            <a class="btn" href="https://www.linkedin.com/in/rishabhsingh2027" target="_blank" rel="noreferrer">LinkedIn</a>
           </div>
         </div>
       </section>
@@ -246,6 +366,7 @@
           <span>© <span id="year"></span> Rishabh Singh</span>
           <span class="footer-right">
             <a href="#projects">Projects</a>
+            <a href="#experience">Experience</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
           </span>
