--- a/index.html
+++ b/index.html
@@ -26,13 +26,7 @@
           <a href="#experience">Experience</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
-          
-            class="pill"
-            href="https://github.com/rishabhsxngh"
-            target="_blank"
-            rel="noreferrer"
-            >GitHub</a
-          >
+          <a class="pill" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">GitHub</a>
         </nav>
       </div>
     </header>
@@ -86,9 +80,9 @@
               <img class="headshot" src="IMG_6308.jpg" alt="Rishabh Singh headshot" />
             </div>
 
-            <!-- NFL LOGO -->
+            <!-- UNIVERSITY OF MICHIGAN LOGO -->
             <div style="text-align: center; padding: 12px 0 8px;">
-              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a2/National_Football_League_logo.svg/300px-National_Football_League_logo.svg.png" alt="NFL" style="height: 36px; opacity: 0.85;" />
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Michigan_Wolverines_logo.svg/300px-Michigan_Wolverines_logo.svg.png" alt="University of Michigan" style="height: 36px; opacity: 0.85;" />
             </div>
 
             <pre class="code">
