--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
 
             <!-- UNIVERSITY OF MICHIGAN LOGO -->
             <div style="text-align: center; padding: 12px 0 8px;">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Michigan_Wolverines_logo.svg/300px-Michigan_Wolverines_logo.svg.png" alt="University of Michigan" style="height: 36px; opacity: 0.85;" />
-            </div>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Michigan_Wolverines_logo.svg/300px-Michigan_Wolverines_logo.svg.png" alt="University of Michigan" style="height: 45px; width: auto; opacity: 0.85;" />            </div>
 
             <pre class="code">
 <span class="code-muted"># recently completed</span>
