--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 Features penalty margin vs win % correlation, z-score outlier detection, and home/away splits across all teams.
               </p>
               <div class="card-actions">
-                <a class="link" href="https://github.com/rishabhsxngh" target="_blank" rel="noreferrer">
+                <a class="link" href="https://github.com/rishabhsxngh/NFL-Analysis" target="_blank" rel="noreferrer">
                   Code →
                 </a>
               </div>
